--- a/MyBusiness/MyBusiness/Content/Site.css
+++ b/MyBusiness/MyBusiness/Content/Site.css
@@ -65,7 +65,6 @@ body
 }
 
 
-
 h2
 {
     margin-left:50px;
@@ -231,6 +230,29 @@ ul#menu li.selected a {color:#000;}
 }
 */
 
+/*description of images when loading image*/
+
+.LoadedImgDesc
+{
+    margin-left:2%;
+    margin-top:10%;
+	color: #000000;
+	font-size:x-large;
+	font-weight:bold;
+	float:left;
+}
+
+.LoadedImg
+{
+    margin-top:15px;
+	float:left;
+	width:50%;
+}
+
+.ClearDiv
+{
+  clear:both;   
+}
 
 #FbImg
 {
@@ -441,6 +463,26 @@ ul#menu li.selected a {color:#000;}
     line-height: 0px;
     padding-left: 0px;
 }
+
+/*for image description loaded*/
+.LoadedImgDesc
+{
+    margin-left:15px;
+    margin-top:15%;
+	color: #000000;
+	font-size:x-large;
+	font-weight:bold;
+	float:left;
+}
+
+.LoadedImg
+{
+    margin-top:15px;
+	float:left;
+	width:70%
+}
+
+
 
 #FbImg
 {
