--- a/MyBusiness/MyBusiness/Views/Apparel/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Apparel/Index.cshtml
@@ -15,75 +15,50 @@
 
  <script type="text/javascript">
 
- 
-  function UpdateWomen()
- {         
-            $.ajax({
-                url: '@Url.Action("ReloadApparelsWomen", "Apparel")',
-                data: { },
-                type: 'POST',
-                success: function (data) {
-                $('#tabs-1').html(data);
-                }
-            });
- }
+
+     function UpdateWomen() {
+         $.ajax({
+             url: '@Url.Action("ReloadApparelsWomen", "Apparel")',
+             data: {},
+             type: 'POST',
+             success: function (data) {
+                 $('#tabs-1').html(data);
+             }
+         });
+     }
 
 
- function UpdateMen()
- {         
-            $.ajax({
-                url: '@Url.Action("ReloadApparelsMen", "Apparel")',
-                data: { },
-                type: 'POST',
-                success: function (data) {
-                $('#tabs-2').html(data);
-                }
-            });
- }
+     function UpdateMen() {
+         $.ajax({
+             url: '@Url.Action("ReloadApparelsMen", "Apparel")',
+             data: {},
+             type: 'POST',
+             success: function (data) {
+                 $('#tabs-2').html(data);
+             }
+         });
+     }
 
      function UpdateView(tab, path, desc) {
          if (tab == "tabs-1") {
-                      $('#' + tab).html('<a href="#" onclick="UpdateWomen(); ">Go back</a> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
+             $('#' + tab).html('<div class=\"LoadedImg\"> <a href="#" onclick="UpdateWomen(); ">Go back</a><br> <br><img src="' + path + '" width=100% /> <br> <br><a href="#" onclick="UpdateWomen(); ">Go back</a> </div> <div class=\"LoadedImgDesc\">' + desc + '</div> ');
          }
          else {
-             $('#' + tab).html('<a href="#" onclick="UpdateMen(); ">Go back</a> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
+             $('#' + tab).html('<div class=\"LoadedImg\"> <a href="#" onclick="UpdateMen(); ">Go back</a><br> <br><img src="' + path + '" width=100% /> <br> <br><a href="#" onclick="UpdateMen(); ">Go back</a> </div> <div class=\"LoadedImgDesc\">' + desc + '</div> ');
          }
      }
 
      $(function () {
-     /*
+
          $("#tab1").on("click", function () {
-             location.reload();
-             $('#tabs').tabs('select', '#tab1');
+             UpdateMen();
          });
          $("#tab2").on("click", function () {
-             location.reload();
-             $('#tabs').tabs('select', '#tab2');
+             UpdateWomen();
          });
-         //  Define friendly index name
-         var index = 'key';
-         //  Define friendly data store name
-         var dataStore = window.sessionStorage;
 
-         //  Start magic!
-         try {
-             // getter: Fetch previous value
-             var oldIndex = dataStore.getItem(index);
-         } catch (e) {
-             // getter: Always default to first tab in error state
-             var oldIndex = 0;
-         }
-         */
          $("#tabs").tabs({
-             /* The zero-based index of the panel that is active (open)
-             active: oldIndex,
-             // Triggered after a tab has been activated
-             activate: function (event, ui) {
-                 //  Get future value
-                 var newIndex = ui.newTab.parent().children().index(ui.newTab);
-                 //  Set future value
-                 dataStore.setItem(index, newIndex)
-             }*/
+
          });
 
          $("#tabs").tabs().css({
