--- a/MyBusiness/MyBusiness/Views/Shirts/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shirts/Index.cshtml
@@ -40,14 +40,21 @@
 
      function UpdateView(tab, path, desc) {
          if (tab == "tabs-1") {
-             $('#' + tab).html('<a href="#" onclick="UpdateWomen(); ">Go back</a> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
+             $('#' + tab).html('<div class=\"LoadedImg\"> <a href="#" onclick="UpdateWomen(); ">Go back</a><br> <br><img src="' + path + '" width=100% /> <br> <br><a href="#" onclick="UpdateWomen(); ">Go back</a> </div> <div class=\"LoadedImgDesc\">' + desc + '</div> ');
          }
          else {
-             $('#' + tab).html('<a href="#" onclick="UpdateMen(); ">Go back</a> <br><img src="' + path + '" width=100% height=100% /> <br>' + desc);
+             $('#' + tab).html('<div class=\"LoadedImg\"> <a href="#" onclick="UpdateMen(); ">Go back</a><br> <br><img src="' + path + '" width=100% /> <br> <br><a href="#" onclick="UpdateMen(); ">Go back</a> </div> <div class=\"LoadedImgDesc\">' + desc + '</div> ');
          }
      }
 
      $(function () {
+
+         $("#tab1").on("click", function () {
+             UpdateMen();
+         });
+         $("#tab2").on("click", function () {
+             UpdateWomen();
+         });
 
          $("#tabs").tabs({
 
