--- a/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
@@ -95,6 +95,7 @@
                             <li class="@Html.ActivePage("Home", "Index")">@Html.ActionLink("Home", "Index", "Home")</li>
                         </ul>
                     <!--</nav>-->
+                    <div class="CompanyName">Donna's Fashion</div>
             </div>
         </header>
     <div id="bodyInner">
