--- a/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
@@ -83,7 +83,7 @@
                         <li class="@Html.ActivePage("About", "Index")">@Html.ActionLink("About Us", "Index", "About")</li>
                         <li class="@Html.ActivePage("Map", "Index")">@Html.ActionLink("Map", "Index", "Map")</li>
                         <li class="@Html.ActivePage("Shoes", "Index")">@Html.ActionLink("Shoes", "Index", "Shoes")</li>
-                        <li class="@Html.ActivePage("Rhinestones", "Index")">@Html.ActionLink("Rhinestones", "Index", "RhineStones")</li>
+                        <li class="@Html.ActivePage("RhineStones", "Index")">@Html.ActionLink("Rhinestones", "Index", "RhineStones")</li>
                             <li><a href="#">Apparels</a>
                             <ul class="sub_menu">
                             <li class="@Html.ActivePage("Shirts", "Index")">@Html.ActionLink("Shirts", "Index", "Shirts")</li>
