--- a/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_Layout.cshtml
@@ -63,15 +63,14 @@
     <meta name="viewport" content="width=device-width" />
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/tabsCustom.js")" type="text/javascript"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/GoogleAnalytics.js")"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
+    <script src="http://code.jquery.com/jquery-1.10.2.js" type="text/javascript"></script>
+    <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="@Url.Content("~/Content/style.css")" type="text/css" media="screen, projection"/>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/js/jquery-1.3.1.min.js")"></script>
+    <script type="text/javascript" language="javascript" src="@Url.Content("~/Scripts/jquery.dropdownplain.js")"></script>
 </head>
-
-<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
-<script src="http://code.jquery.com/jquery-1.10.2.js" type="text/javascript"></script>
-<script src="http://code.jquery.com/ui/1.11.1/jquery-ui.js" type="text/javascript"></script>
-
-<link rel="stylesheet" href="@Url.Content("~/Content/style.css")" type="text/css" media="screen, projection"/>
-<script type="text/javascript" src="@Url.Content("~/Scripts/js/jquery-1.3.1.min.js")"></script>	
-	<script type="text/javascript" language="javascript" src="@Url.Content("~/Scripts/jquery.dropdownplain.js")"></script>
 
 <script type="text/javascript">
 </script>
