--- a/MyBusiness/MyBusiness/Views/Shared/_GlitterShirtsWomen.cshtml
+++ b/MyBusiness/MyBusiness/Views/Shared/_GlitterShirtsWomen.cshtml
@@ -12,7 +12,7 @@
    <div class="imageItem">
    <span class="image">
         <!--<a href="CapsImages/@image.Path">-->
-        <img class="imgSingle" style="cursor:pointer;" src="GlitterImages/@image.Path" onclick="UpdateView('tabs-1', 'GlitterImages/@image.Path', '@image.Description');" height="100" width="100" /><!--</a>-->
+        <img class="imgSingle" style="cursor:pointer;" src="GlitterShirtsImages/@image.Path" onclick="UpdateView('tabs-1', 'GlitterShirtsImages/@image.Path', '@image.Description');" height="100" width="100" /><!--</a>-->
         <br />
         <span class="description">@image.Description</span>
    </span>
