--- a/MyBusiness/MyBusiness/Content/style.css
+++ b/MyBusiness/MyBusiness/Content/style.css
@@ -31,7 +31,7 @@ ul.dropdown ul li 					{ font-weight: normal; background: #FFFF44; color: #000;
 									  border-bottom: 1px solid #ccc; float: none; }
 									  
                                     /* IE 6 & 7 Needs Inline Block */
-ul.dropdown ul li a					{ border-right: none; width: 100%; display: inline-block; } 
+ul.dropdown ul li a					{ border-right: none; width: 90px; display: inline-block; } 
 
 /* 
 	LEVEL THREE
@@ -72,12 +72,12 @@ ul.dropdown li.hover a              { color: black; }
 /* 
 	LEVEL TWO
 */
-ul.dropdown ul 						{ width: 90px; visibility: hidden; position: absolute; top: 100%; left: 0; font-size:8px;}
+ul.dropdown ul 						{ width: 80px; visibility: hidden; position: absolute; top: 100%; left: 0; font-size:8px;}
 ul.dropdown ul li 					{ font-weight: normal; background: #FFFF44; color: #000; height:20px;
 									  border-bottom: 1px solid #ccc; float: none; }
 									  
                                     /* IE 6 & 7 Needs Inline Block */
-ul.dropdown ul li a					{ border-right: none; width: 100%; display: inline-block; } 
+ul.dropdown ul li a					{ border-right: none; width: 58px; display: inline-block; } 
 
 /* 
 	LEVEL THREE
