--- a/MyBusiness/MyBusiness/Content/Site.css
+++ b/MyBusiness/MyBusiness/Content/Site.css
@@ -1,73 +1,61 @@
-﻿html {
-    /*background:url("/Images/turquoise-pattern.gif") no-repeat;
-    background-repeat:repeat;*/
-    /*background-color : black;*/
-        /*background-color: #3EA99F;*/
-        /* IE10 Consumer Preview */ 
-      /*  background-image:-moz-linear-gradient(top,#3EA99F,#FFFFFF);
-        background-image:-webkit-linear-gradient(top,#3EA99F,#FFFFFF);
-        background-image:-o-linear-gradient(top,#3EA99F,#FFFFFF);
-        background-image:-ms-linear-gradient(top,#3EA99F,#FFFFFF);
-        background-image:linear-gradient(top,#3EA99F,#FFFFFF);
-        background-repeat: no-repeat; */
-        margin: 0;
-        padding: 0;
+﻿html
+{
+    /*background:url("/Images/turquoise-pattern.gif") no-repeat;     background-repeat:repeat;*/ /*background-color : black;*/ /*background-color: #3EA99F;*/ /* IE10 Consumer Preview */ /*  background-image:-moz-linear-gradient(top,#3EA99F,#FFFFFF);         background-image:-webkit-linear-gradient(top,#3EA99F,#FFFFFF);         background-image:-o-linear-gradient(top,#3EA99F,#FFFFFF);         background-image:-ms-linear-gradient(top,#3EA99F,#FFFFFF);         background-image:linear-gradient(top,#3EA99F,#FFFFFF);         background-repeat: no-repeat; */
+    margin: 0;
+    padding: 0;
 }
 
 body
 {
     font-size: .85em;
-    font-family: "Trebuchet MS", Verdana, Helvetica, Sans-Serif;
+    font-family: "Trebuchet MS" , Verdana, Helvetica, Sans-Serif;
     color: #232323;
     background-color: #000000;
 }
 
-#container 
+#container
 {
-    margin-top:2%;
+    margin-top: 2%;
     width: 980px;
     height: 100%;
     overflow: hidden;
-    margin-left:auto;
-    margin-right:auto;
+    margin-left: auto;
+    margin-right: auto;
     padding: 30px 30px 0px 0px;
-    clear:both;
+    clear: both;
 }
 
 
 #bodyInner
 {
-    font-size:large;
-    padding-left:4px;
-    padding-right:4px;
-    width: 970px;
-    /*background-color: #efeeef;*/
+    font-size: large;
+    padding-left: 4px;
+    padding-right: 4px;
+    width: 970px; /*background-color: #efeeef;*/
     background-color: #fff;
     clear: both;
     padding-bottom: 35px;
-    margin-left:auto;
-    margin-right:auto;
-    height:760px;
-    /*border-top-left-radius:15px;
-    border-top-right-radius:15px;*/
+    margin-left: auto;
+    margin-right: auto;
+    height: 760px; /*border-top-left-radius:15px;     border-top-right-radius:15px;*/
 }
 
 /*image sizes*/
 .description
 {
-  font-size:x-small;   
+    font-size: x-small;
 }
 
 .imageItem
 {
-    text-align:center;
-    padding:7px;
+    text-align: center;
+    padding: 7px;
 }
 
 
 h2
 {
-    margin-left:50px;
+    margin-left: 50px;
 }
 
 .bar
@@ -76,7 +64,7 @@ h2
     width: 100%;
     margin-bottom: 2px;
     background-color: #0047A3;
-    text-align:center;
+    text-align: center;
 }
 
 .barText
@@ -90,20 +78,17 @@ h2
 
 .CompanyName
 {
-  position:absolute;
-  float:right;
-  color:#FF3CB1;
-  font-size:18px;
-  width:160px;
-  margin-left: 15px;
+    position: absolute;
+    float: right;
+    color: #FF3CB1;
+    font-size: 18px;
+    width: 160px;
+    margin-left: 15px;
 }
 
-header,
-footer,
-nav,
-section 
+header, footer, nav, section
 {
-    margin-top:-10px;
+    margin-top: -10px;
     display: block;
 }
 
@@ -111,32 +96,32 @@ section
 /* Styles for basic forms
 -----------------------------------------------------------*/
 
-fieldset 
+fieldset
 {
-    border:1px solid #ddd;
-    padding:0 1.4em 1.4em 1.4em;
-    margin:0 0 1.5em 0;
+    border: 1px solid #ddd;
+    padding: 0 1.4em 1.4em 1.4em;
+    margin: 0 0 1.5em 0;
 }
 
-legend 
+legend
 {
-    font-size:1.2em;
+    font-size: 1.2em;
     font-weight: bold;
 }
 
-textarea 
+textarea
 {
     min-height: 75px;
 }
 
-.editor-label 
+.editor-label
 {
     margin: 1em 0 0 0;
 }
 
-.editor-field 
+.editor-field
 {
-    margin:0.5em 0 0 0;
+    margin: 0.5em 0 0 0;
 }
 
 
@@ -171,35 +156,76 @@ textarea
 
 /* TAB MENU   
 ----------------------------------------------------------*/
-ul#menu {padding:0;position:relative;margin:0 0 0 15px;text-align:right;}
+ul#menu
+{
+    padding: 0;
+    position: relative;
+    margin: 0 0 0 15px;
+    text-align: right;
+}
 /* tab background color */
-ul#menu li {display:block;list-style:none;background:#FFFF44 no-repeat 0 -150px;float:right;margin:0 2px 0 0;font-size:.8em;}
+ul#menu li
+{
+    display: block;
+    list-style: none;
+    background: #FFFF44 no-repeat 0 -150px;
+    float: right;
+    margin: 0 2px 0 0;
+    font-size: .8em;
+}
 /* tab font color */
-ul#menu li a {padding:10px 15px;font-weight:bold;text-decoration:none;color:#000;background: transparent no-repeat right -150px;display:block;}
-ul#menu li a:hover {text-decoration:none;color:#FF3CB1;}
-ul#menu li a:active {text-decoration:none;color:#009933;}
-ul#menu li.selected {background:#FF3CB1 no-repeat 0 -150px;}
-ul#menu li.selected a {color:#000;}
+ul#menu li a
+{
+    padding: 10px 15px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #000;
+    background: transparent no-repeat right -150px;
+    display: block;
+}
+ul#menu li a:hover
+{
+    text-decoration: none;
+    color: #FF3CB1;
+}
+ul#menu li a:active
+{
+    text-decoration: none;
+    color: #009933;
+}
+ul#menu li.selected
+{
+    background: #FF3CB1 no-repeat 0 -150px;
+}
+ul#menu li.selected a
+{
+    color: #000;
+}
 
 
 /* silver bar at top*/
 .ui-widget-header
 {
-    background:transparent !important;
+    background: transparent !important;
 }
 
-.ui-tabs{
+.ui-tabs
+{
     padding: 0 !important;
-    margin-top:0px;
-    position:relative;
+    margin-top: 0px;
+    position: relative;
 }
 
-.ui-tabs .ui-tabs-nav{
+.ui-tabs .ui-tabs-nav
+{
     padding: 0 !important;
-    border:none;
+    border: none;
 }
 
-#tabs {border: none}
+#tabs
+{
+    border: none;
+}
 
 
 /*
@@ -233,373 +259,431 @@ ul#menu li.selected a {color:#000;}
 
 .LoadedImgDesc
 {
-    margin-left:2%;
-    margin-top:10%;
-	color: #000000;
-	font-size:x-large;
-	font-weight:bold;
-	float:left;
+    margin-left: 2%;
+    margin-top: 10%;
+    color: #000000;
+    font-size: x-large;
+    font-weight: bold;
+    float: left;
 }
 
 .LoadedImg
 {
-    margin-top:15px;
-	float:left;
-	width:50%;
+    margin-top: 15px;
+    float: left;
+    width: 50%;
 }
 
 .ClearDiv
 {
-  clear:both;   
+    clear: both;
 }
 
 #FbImg
 {
-    width:50px;
-    float:right;
+    width: 50px;
+    float: right;
 }
 
 #GitHubImg
 {
-    width:25px;
+    width: 25px;
 }
 
 #LinkedInImg
 {
-    width:25px;
+    width: 25px;
 }
 
-footer 
+footer
 {
     /*background-color: #e2e2e2;*/
     background-color: #000000;
     font-size: .8em;
     height: 100px;
-    color:#ffffff;
-    /*border-bottom-left-radius:15px;
-    border-bottom-right-radius:15px;*/
+    color: #ffffff; /*border-bottom-left-radius:15px;     border-bottom-right-radius:15px;*/
 }
 
 .copyright
 {
-    float:left;
-    width:150px;
+    float: left;
+    width: 150px;
 }
 
 
 .footer-text
 {
-    float:right;
-    color:#FF3CB1;
+    float: right;
+    color: #FF3CB1;
 }
 
 /* Home */
 
 .WelcomeMsg
 {
-    text-align:center;
-    font-size:larger;
+    text-align: center;
+    font-size: larger;
 }
 
 #slideshow
 {
-     
+    margin: 50px auto;
+    position: relative; 
+    /*width: 240px;             
+    height: 240px;*/
+    width: 340px;
+    height: 340px;
+    padding: 10px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.4);
 }
+
+        #slideshow > div
+        {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            right: 10px;
+            bottom: 10px;
+        }
 
 /* About Me */
 .StoreHours
 {
-    color:#605F5F;
-    position:absolute;
+    color: #605F5F;
+    position: absolute;
     margin-left: 60px;
     margin-top: 100px;
-    font-size:medium;
+    font-size: medium;
 }
 
 .StoreHoursU
 {
-    color:#605F5F;
-    font-weight:bold;
-    font-size:x-large;
-    text-decoration:underline;
+    color: #605F5F;
+    font-weight: bold;
+    font-size: x-large;
+    text-decoration: underline;
 }
 
 #map-large
 {
     position: absolute;
-    margin-left:600px;
+    margin-left: 600px;
     margin-top: 500px;
 }
 
 
 #map-canvas
 {
-    width:500px;
-    height:500px;
-    margin-top:20px;
-    margin-right:50px;
-    float:right;
+    width: 500px;
+    height: 500px;
+    margin-top: 20px;
+    margin-right: 50px;
+    float: right;
 }
 
 
 /********************
 *   Mobile Styles   *
 ********************/
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 850px)
+{
 
-html {
-    /*background:url("/Images/turquoise-pattern.gif") no-repeat;
-    background-repeat:repeat;*/
-    background-color : black;
-        /*background-color: #3EA99F;*/
-        /* IE10 Consumer Preview */ 
-      /*  background-image:-moz-linear-gradient(top,#3EA99F,#FFFFFF);
-        background-image:-webkit-linear-gradient(top,#3EA99F,#FFFFFF);
-        background-image:-o-linear-gradient(top,#3EA99F,#FFFFFF);
-        background-image:-ms-linear-gradient(top,#3EA99F,#FFFFFF);
-        background-image:linear-gradient(top,#3EA99F,#FFFFFF);
-        background-repeat: no-repeat; */
+    html
+    {
+        /*background:url("/Images/turquoise-pattern.gif") no-repeat;     background-repeat:repeat;*/
+        background-color: black; /*background-color: #3EA99F;*/ /* IE10 Consumer Preview */ /*  background-image:-moz-linear-gradient(top,#3EA99F,#FFFFFF);         background-image:-webkit-linear-gradient(top,#3EA99F,#FFFFFF);         background-image:-o-linear-gradient(top,#3EA99F,#FFFFFF);         background-image:-ms-linear-gradient(top,#3EA99F,#FFFFFF);         background-image:linear-gradient(top,#3EA99F,#FFFFFF);         background-repeat: no-repeat; */
         margin: 0;
         padding: 0;
-}
+    }
 
-body
-{
-    font-size: .85em;
-    font-family: "Trebuchet MS", Verdana, Helvetica, Sans-Serif;
-    color: #232323;
-    background-color: #000000;
-}
+    body
+    {
+        font-size: .85em;
+        font-family: "Trebuchet MS" , Verdana, Helvetica, Sans-Serif;
+        color: #232323;
+        background-color: #000000;
+    }
 
-  /* header
-    ----------------------------------------------------------*/
+    /* header
+        ----------------------------------------------------------*/
     /*top tab*/
-    header .float-left,
-    header .float-right {
+    header .float-left, header .float-right
+    {
         float: right;
-        font-size:x-small;
+        font-size: x-small;
     }
 
     /* logo */
-    header .site-title {
+    header .site-title
+    {
         margin: 10px;
         text-align: center;
     }
 
     /* login */
-    #login {
-    display: block;
-    font-size: .85em;
-    margin: 0 0 10px;
-    text-align: right;
-    color:#000;
+    #login
+    {
+        display: block;
+        font-size: .85em;
+        margin: 0 0 10px;
+        text-align: right;
+        color: #000;
     }
 
-        #login ul {
-            margin: 5px 0;
-            padding: 0;
-        }
+    #login ul
+    {
+        margin: 5px 0;
+        padding: 0;
+    }
 
-        #login li {
+    #login li
+    {
         display: inline;
         list-style: none;
-        }
+    }
 
-        #login a {
+    #login a
+    {
         background-color: #d3dce0;
         margin-left: 10px;
         margin-right: 3px;
         padding: 2px 3px;
         text-decoration: none;
-        }
+    }
 
-        #login a:hover {
-            color: #333;
-        }
+    #login a:hover
+    {
+        color: #333;
+    }
 
-/* TAB MENU   
-----------------------------------------------------------*/
-ul#menu {padding:0;position:relative;margin:0 0 0 15px;text-align:right;}
-/* tab background color */
-ul#menu li {display:block;list-style:none;background:#FFFF44 no-repeat 0 -150px;float:right;margin:0 2px 0 0;font-size:8px;}
-/* tab font color */
-ul#menu li a {padding:6px 12px;font-weight:bold;text-decoration:none;color:#000;background: transparent no-repeat right -150px;display:block;}
-ul#menu li a:hover {text-decoration:none;color:#FF3CB1;}
-ul#menu li a:active {text-decoration:none;color:#009933;}
-ul#menu li.selected {background:#FF3CB1 no-repeat 0 -150px;}
-ul#menu li.selected a {color:#000;}
+    /* TAB MENU   
+    ----------------------------------------------------------*/
+    ul#menu
+    {
+        padding: 0;
+        position: relative;
+        margin: 0 0 0 15px;
+        text-align: right;
+    }
+    /* tab background color */
+    ul#menu li
+    {
+        display: block;
+        list-style: none;
+        background: #FFFF44 no-repeat 0 -150px;
+        float: right;
+        margin: 0 2px 0 0;
+        font-size: 8px;
+    }
+    /* tab font color */
+    ul#menu li a
+    {
+        padding: 6px 12px;
+        font-weight: bold;
+        text-decoration: none;
+        color: #000;
+        background: transparent no-repeat right -150px;
+        display: block;
+    }
+    ul#menu li a:hover
+    {
+        text-decoration: none;
+        color: #FF3CB1;
+    }
+    ul#menu li a:active
+    {
+        text-decoration: none;
+        color: #009933;
+    }
+    ul#menu li.selected
+    {
+        background: #FF3CB1 no-repeat 0 -150px;
+    }
+    ul#menu li.selected a
+    {
+        color: #000;
+    }
 
-.subMenuSpacing
-{
-    margin-left:206px;
-}
+    .subMenuSpacing
+    {
+        margin-left: 206px;
+    }
 
-/*image sizes*/
-.imgSingle
-{
-  width:50px;
-  height:50px;
-}
-.description
-{
-  font-size:x-small;  
-}
+    /*image sizes*/
+    .imgSingle
+    {
+        width: 50px;
+        height: 50px;
+    }
+    .description
+    {
+        font-size: x-small;
+    }
 
-.imageItem
-{
-    text-align:center;
-    padding:8px;
-}
+    .imageItem
+    {
+        text-align: center;
+        padding: 8px;
+    }
 
-.CompanyName
-{
-  position:absolute;
-  float:right;
-  color:#FF3CB1;
-  font-size:18px;
-  width:160px;
-  margin-left: 5px;
-}
+    .CompanyName
+    {
+        position: absolute;
+        float: right;
+        color: #FF3CB1;
+        font-size: 18px;
+        width: 160px;
+        margin-left: 5px;
+    }
 
-.bar
-{
-    height: 30px;
-    width: 100%;
-    margin-bottom: 2px;
-    background-color: #0047A3;
-    text-align:center;
-}
+    .bar
+    {
+        height: 30px;
+        width: 100%;
+        margin-bottom: 2px;
+        background-color: #0047A3;
+        text-align: center;
+    }
 
-.barText
-{
-    float: left;
-    color: #FFF;
-    font-size: 12px;
-    line-height: 0px;
-    padding-left: 0px;
-}
+    .barText
+    {
+        float: left;
+        color: #FFF;
+        font-size: 12px;
+        line-height: 0px;
+        padding-left: 0px;
+    }
 
-/*for image description loaded*/
-.LoadedImgDesc
-{
-    margin-left:15px;
-    margin-top:15%;
-	color: #000000;
-	font-size:x-large;
-	font-weight:bold;
-	float:left;
-}
+    /*for image description loaded*/
+    .LoadedImgDesc
+    {
+        margin-left: 15px;
+        margin-top: 15%;
+        color: #000000;
+        font-size: x-large;
+        font-weight: bold;
+        float: left;
+    }
 
-.LoadedImg
-{
-    margin-top:15px;
-	float:left;
-	width:70%
-}
-
-
-
-#FbImg
-{
-    width:30px;
-    float:right;
-}
-
-#GitHubImg
-{
-    width:40px;
-}
-
-#LinkedInImg
-{
-    width:40px;
-}
-
-.copyright
-{
-    float:left;
-    width:150px;
-}
+    .LoadedImg
+    {
+        margin-top: 15px;
+        float: left;
+        width: 70%;
+    }
 
 
-.footer-text
-{
-    float:right;
-    color:#FF3CB1;
-}
+
+    #FbImg
+    {
+        width: 30px;
+        float: right;
+    }
+
+    #GitHubImg
+    {
+        width: 40px;
+    }
+
+    #LinkedInImg
+    {
+        width: 40px;
+    }
+
+    .copyright
+    {
+        float: left;
+        width: 150px;
+    }
+
+
+    .footer-text
+    {
+        float: right;
+        color: #FF3CB1;
+    }
 
     #bodyInner
-  {
-    font-size:small;
-    padding-left:4px;
-    padding-right:4px;
-    width: 660px;
-    background-color: #fff;
-    padding-bottom: 0px;
-    /*border-left: 2px solid #FFF;
-    border-right: 2px solid #FFF;
-    border-top: 2px solid #FFF;*/
-    /*border-top-left-radius:15px;
-    border-top-right-radius:5px;*/
-  }
-  
-  #container 
-  {
-    margin-top:2%;
-    position: relative;
-    width: 670px;
-    height: 100%;
-    overflow: hidden;
-    margin-left:auto;
-    margin-right:auto;
-    font-size: .7em;
-    padding: 30px 30px 0px 0px;
-    margin-left:5%;
-    clear:both;
-}
+    {
+        font-size: small;
+        padding-left: 4px;
+        padding-right: 4px;
+        width: 660px;
+        background-color: #fff;
+        padding-bottom: 0px; /*border-left: 2px solid #FFF;     border-right: 2px solid #FFF;     border-top: 2px solid #FFF;*/ /*border-top-left-radius:15px;     border-top-right-radius:5px;*/
+    }
 
-/* Home */
-.WelcomeMsg
-{
-    text-align:center;
-    font-size:larger;
-}
+    #container
+    {
+        margin-top: 2%;
+        position: relative;
+        width: 670px;
+        height: 100%;
+        overflow: hidden;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: .7em;
+        padding: 30px 30px 0px 0px;
+        margin-left: 5%;
+        clear: both;
+    }
+
+    /* Home */
+    .WelcomeMsg
+    {
+        text-align: center;
+        font-size: larger;
+    }
 
 #slideshow
 {
-
+    margin: 50px auto;
+    position: relative; 
+    width: 240px;             
+    height: 240px;
+    padding: 10px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.4);
 }
 
-/* About Me */
+		#slideshow > div
+		{
+			position: absolute;
+			top: 10px;
+			left: 10px;
+			right: 10px;
+			bottom: 10px;
+		}
 
-.StoreHours
-{
-    position:absolute;
-    margin-left: 20px;
-    margin-top: 180px;
-}
+    /* About Me */
 
-.StoreHoursU
-{
-    font-weight:bold;
-    font-size:20px;
-    text-decoration:underline;
-}
+    .StoreHours
+    {
+        position: absolute;
+        margin-left: 20px;
+        margin-top: 180px;
+    }
 
-#map-large
-{
-    position: absolute;
-    margin-left:410px;
-    margin-top: 450px;
-}
+    .StoreHoursU
+    {
+        font-weight: bold;
+        font-size: 20px;
+        text-decoration: underline;
+    }
+
+    #map-large
+    {
+        position: absolute;
+        margin-left: 410px;
+        margin-top: 450px;
+    }
 
 
-#map-canvas
-{
-    width:350px;
-    height:350px;
-    margin-top:100px;
-    margin-right:30px;
-    float:right;
-}
+    #map-canvas
+    {
+        width: 350px;
+        height: 350px;
+        margin-top: 100px;
+        margin-right: 30px;
+        float: right;
+    }
 }
