--- a/MyBusiness/MyBusiness/Views/Home/Index.cshtml
+++ b/MyBusiness/MyBusiness/Views/Home/Index.cshtml
@@ -8,21 +8,8 @@
 
 <html>
 <head>
+<script type="text/javascript" src="@Url.Content("~/Scripts/SlideShow.js")"></script>
     <title>Home</title>
-    <script type="text/javascript">
-        $(function () {
-            $("#slideshow > div:gt(0)").hide();
-
-            setInterval(function () {
-                $('#slideshow > div:first')
-    .fadeOut(1000)
-    .next()
-    .fadeIn(1000)
-    .end()
-    .appendTo('#slideshow');
-            }, 3000);
-        });
-    </script>
 </head>
 <body>
     <div class="content-wrapper">
